--- a/css/style.css
+++ b/css/style.css
@@ -1499,6 +1499,16 @@ body {
   overflow: hidden;
 }
 
+@media screen and (width > 1024px){
+  .about-hidden{
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+    justify-content: start;
+    margin-top: 165px;
+    margin-left: 165px;
+  }
+}
 
 .about-img-1{
   height: 311px;
@@ -1516,26 +1526,6 @@ body {
   }
 } 
 
-/* circulo blanco */
-@media screen and (width > 768px) {
-  .about-white-circle{
-    background-image: url(../assets/img/patterns/circle.svg);
-    background-size: cover;
-    width: 445px;
-    height: 445px;
-    position: relative;
-    top: -500px;
-    left: 670px;
-    z-index: -1;
-  }
-}
-@media screen and (width > 1024px) {
-  .about-white-circle{
-    background-image: url(../assets/img/patterns/circle.svg);
-    background-size: cover;
-    height: 445px;
-  }
-} 
 
 
 .about-phone{
@@ -1554,18 +1544,21 @@ body {
     width: 445px;
     height: 445px;
     margin: 0;
-    margin-left: 144px;
-    margin-top: 164px;
+    margin-left: 164px;
+    margin-top: 144px;
   }
 }
 @media screen and (width > 1024px) {
   .about-phone{
     margin: 0;
-
+    margin-left: 95px;
   }
 } 
 
-.about-arrow-right{
+
+
+
+.about-arrow-1{
   background-image: url(../assets/img/patterns/left-upward-arrow.svg);
   background-size: contain;
   background-repeat: no-repeat;
@@ -1578,38 +1571,369 @@ body {
 
 
 @media screen and (width > 768px) {
-  .about-arrow-right{
+  .about-arrow-1t{
     top: -182px;
     left: 20px;
+    width: 735px;
   }
 }
 @media screen and (width > 1024px) {
-  .about-arrow-right{
+  .about-arrow-1{
+  height: 139px;
+  left: -20px;
+  }
+} 
 
+/* circle white start */
+
+
+@media screen and (width > 768px) {
+  .about-white-circle{
+    background-image: url(../assets/img/patterns/circle.svg);
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: 445px;
+    height: 445px;
+    position: relative;
+    bottom: 756px;
+    left: 680px;
+    z-index: -1;
+  }
+}
+@media screen and (width > 1024px) {
+  .about-white-circle{
+    background-image: url(../assets/img/patterns/circle.svg);
+    background-size: cover;
+    height: 445px;
+    left: 650px;
+    bottom: 590px;
+  }
+}
+
+/* circle white end */
+
+
+.about-container-text-1{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 56px;
+  margin-left: 32px;
+  margin-right: 32px;
+  width: 311px;
+  height: 196px;
+
+}
+
+@media screen and (width > 768px) {
+  .about-container-text-1{
+    width: 573px;
+    height: 186px;
+    margin: 0;
+    margin-top: 56px;    
+    margin-left: 97px;
+    margin-right: 97px;
+    
+  }
+}
+@media screen and (width > 1024px) {
+  .about-container-text-1{
+    margin: 0;
+    width: 445px;
+    height: 195px;
+    margin-right: 95px;
+  }
+} 
+
+.about-subtitle-1{
+  margin: 0;
+  font-family: "Space Mono", serif;
+  font-weight: 700;
+  text-align: center;
+  font-size: 32px;
+  line-height: 32px;
+  letter-spacing: -1.43px;
+  color: #495567;
+}
+
+@media screen and (width > 768px) {
+  .about-subtitle-1{
+    font-size: 48px;
+    line-height: 48px;
+    letter-spacing: -2.14px;
+    height: 96px;
+
+    
+  }
+}
+@media screen and (width > 1024px) {
+  .about-subtitle-1{
+    margin: 0;
+    text-align: left;
+    height: 96px;
+  }
+} 
+
+.about-text-1{
+  font-size: 15px;
+  line-height: 25px;
+  text-align: center;
+  color: #939CAA;
+  margin-top: 32px;
+  height: 100px;
+}
+
+@media screen and (width > 768px) {
+  .about-text-1{
+    margin: 0;
+    height: 50px;
+    margin-top: 40px;
+  }
+}
+@media screen and (width > 1024px) {
+  .about-text-1{
+    margin: 0;
+    text-align: left;
+    margin-top: 24px;
   }
 } 
 
 
-.about-container-text-1{
 
-}
+/* ABOUT LIVING */
 
+/* 
 @media screen and (width > 768px) {}
 @media screen and (width > 1024px) {} 
+*/
 
-.about-subtitle-1{
+.about-hidden-2{
+  overflow: hidden;
+}
+
+@media screen and (width > 1024px){
+  .about-hidden-2{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: start;
+    margin-top: 165px;
+    margin-right: 165px;
+  }
+}
+
+.about-img-2{
+  height: 311px;
+}
+
+@media screen and (width > 768px) {
+  .about-img-2{
+    height: 445px;
+    
+  }
+}
+@media screen and (width > 1024px) {
+  .about-img-2{
+    height: 445px;
+  }
+}
+
+
+.about-living{
+  background-image: url(../assets/img/images/better-living.jpg);
+  background-size: cover;
+  width: 311px;
+  height: 311px;
+  margin-left: 32px;
+  margin-right: 32px;
+  margin-top: 120px;
+  border-radius: 100%;
+}
+
+@media screen and (width > 768px) {
+  .about-living{
+    width: 445px;
+    height: 445px;
+    margin: 0;
+    margin-left: 164px;
+    margin-top: 120px;
+  }
+}
+
+@media screen and (width > 1024px) {
+  .about-living{
+    margin: 0;
+    margin-left: 165px;
+  }
+} 
+
+
+.about-arrow-2{
+  background-image: url(../assets/img/patterns/right-arrow.svg);
+  background-size: contain;
+  background-repeat: no-repeat;  
+  height: 138px;
+  position: relative;
+  top: -300px;
+  left: -35px;
+}
+
+@media screen and (width > 768px) {
+  .about-arrow-2{
+    top: -440px;
+    left: -65px;
+    width: 735px;
+  }
+}
+
+
+
+@media screen and (width > 1024px) {
+  .about-arrow-2{
+  height: 139px;
+  }
+} 
+
+
+/* circle white start */
+
+@media screen and (width > 768px) {
+  .about-white-circle-2{
+    background-image: url(../assets/img/patterns/circle.svg);
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: 445px;
+    height: 445px;
+    position: relative;
+    bottom: 580px;
+    left: -360px;
+    z-index: -1;
+  }
+}
+@media screen and (width > 1024px) {
+  .about-white-circle-2{
+    background-image: url(../assets/img/patterns/circle.svg);
+    background-size: cover;
+    height: 445px;
+  }
+}
+
+
+/* circle white end */
+
+.about-container-text-2{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 56px;
+  margin-left: 32px;
+  margin-right: 32px;
+  width: 311px;
+  height: 196px;
+}
+
+
+@media screen and (width > 768px) {
+  .about-container-text-2{
+    width: 573px;
+    height: 186px;
+    margin: 0;
+    margin-top: 56px;    
+    margin-left: 97px;
+    margin-right: 97px;
+    
+  }
+}
+
+@media screen and (width > 1024px) {
+  .about-container-text-2{
+    margin: 0;
+    width: 445px;
+    height: 195px;
+    margin-left: 95px;
+  }
+} 
+
+.about-subtitle-2{
   margin: 0;
+  font-family: "Space Mono", serif;
+  font-weight: 700;
+  text-align: center;
+  font-size: 32px;
+  line-height: 32px;
+  letter-spacing: -1.43px;
+  color: #495567;
 }
 
-@media screen and (width > 768px) {}
-@media screen and (width > 1024px) {} 
 
-.about-text-1{
+@media screen and (width > 768px) {
+  .about-subtitle-2{
+    font-size: 48px;
+    line-height: 48px;
+    letter-spacing: -2.14px;
+    height: 96px;
 
+    
+  }
 }
 
-@media screen and (width > 768px) {}
-@media screen and (width > 1024px) {} 
+@media screen and (width > 1024px) {
+  .about-subtitle-2{
+    margin: 0;
+    text-align: left;
+    height: 96px;
+  }
+} 
+
+
+.about-text-2{
+  font-size: 15px;
+  line-height: 25px;
+  text-align: center;
+  color: #939CAA;
+  margin-top: 32px;
+  height: 100px;
+}
+
+@media screen and (width > 768px) {
+  .about-text-2{
+    margin: 0;
+    height: 50px;
+    margin-top: 40px;
+  }
+}
+
+@media screen and (width > 1024px) {
+  .about-text-2{
+    margin: 0;
+    text-align: left;
+    margin-top: 24px;
+  }
+} 
+
+/* 
+
+
+
+/* circulo blanco */
+
+/* 
+
+
+
+
+
+
+
+
+
+
+
+
+ */
+
 
 
 /* overflow hidden -- pointer-events */
